--- a/latex/lab_pca.tex
+++ b/latex/lab_pca.tex
@@ -47,11 +47,22 @@ Matlab provides some example data and for principal component analysis.
 
 Run \verb+lab_pca_matlab.m+ and describe the data set.
 
-\item Uncomment the break statement, then generate the figures for the tutorial (Part I).
+\vertgap
+\vertgap
+\vertgap
+
+\item Uncomment the error statement, then generate the figures for the tutorial (Part I).
 
 \item Examine the relationships among cov, svd, eig, and pca in Part II in order to understand how PCA works.
 
+\vertgap
+\vertgap
+
 \item Interpret what PCA suggests about the ``profiles'' of cities in the U.S. and how they explain variations in quality of life.
+
+\vertgap
+\vertgap
+\vertgap
 
 %For example, the first principal component, on the horizontal axis, has positive coefficients for all nine variables. That is why the nine vectors are directed into the right half of the plot. The largest coefficients in the first principal component are the third and seventh elements, corresponding to the variables health and arts.
 
@@ -61,7 +72,7 @@ Run \verb+lab_pca_matlab.m+ and describe the data set.
 
 %------------------------
 
-%\pagebreak
+\pagebreak
 \subsection*{Part II: Protein consumption in Europe (lab)}
 
 Copy the template file to \verb+lab_pca.m+.
@@ -73,9 +84,15 @@ The file \verb+protein.dat+ contains data on the protein consumption in 25 Europ
 
 \label{p1}
 
+\vertgap
+\vertgap
+
 \item Perform a principal component analysis to determine how meat consumption is related to consumption of other foods. How many principal components do you need to account for 95\% of the variability in the data? Interpret the leading principal components qualitatively.
 
 \label{p2}
+
+\vertgap
+\vertgap
 
 \item Make scatterplots of principal component scores. Can you divide the diets into geographical groups? If so, what dietary characteristics distinguish the groups?
 
@@ -83,9 +100,15 @@ Note: The command \verb+text(x,y,dlabs)+ will plot short text labels for each ob
 
 \label{p3}
 
+\vertgap
+\vertgap
+
 \item Repeat (\ref{p2}) and (\ref{p3}) but perform a principal component analysis on a standardized version of the data. How do the results differ from those obtained before?
 
-\item \textcolor{red}{Write a couple sentences that summarize the data set. ``Protein consumption in Europe falls into XX geographic regions: \ldots. These XX regions can be explained in terms of \ldots''}
+\vertgap
+\vertgap
+
+\item Write a couple sentences that summarize the data set. ``Protein consumption in Europe falls into XX geographic regions: \ldots. These XX regions can be explained in terms of \ldots''
 
 \end{enumerate}
 
