--- a/latex/hw_ch2.tex
+++ b/latex/hw_ch2.tex
@@ -22,7 +22,7 @@ Last compiled: \today
 \subsection*{Instructions}
 
 \begin{itemize}
-\item These problems are from \citet{AsterE2}, Chapters 2 and 3. Be sure you understand Examples 2-1, 2-2, and 3-1; template scripts\footnote{These scripts come with the Matlab toolbox from the book. I have made minor changes and added the {\tt $\_$carl} to distinguish these versions from those in the toolbox.}  for these are saved as \verb+ex_2_1_2_uaf.m+ and \verb+ex_3_1_uaf.m+ in the class directory.
+\item These problems are from \citet{AsterE2}, Chapters 2 and 3. Be sure you understand Examples 2-1, 2-2, and 3-1; template scripts\footnote{These scripts come with the Matlab toolbox from the book. I have made minor changes and added the {\tt \_uaf} to distinguish these versions from those in the toolbox.}  for these are saved as \verb+ex_2_1_2_uaf.m+ and \verb+ex_3_1_uaf.m+ in the class directory.
 \item Wherever it says ``calculate \ldots'' or ``compute \ldots,'' please list the numerical output.
 \item List units for all answers.
 \end{itemize}
@@ -39,7 +39,7 @@ t_i = t_0 + s_2x_i,
 \label{twolayer}
 \end{equation}
 %
-where the intercept time, $t_0$, depends on the thickness and slowness of the upper layer, and $s_2$ is the slowness of the lower layer. The estimated noise in the first arrival time measurements is believed to be independent and normally distributed with the expected value 0 and standard deviation $\sigma = 0.1$~s. (Note: You are not going to generate any errors (until problem~1-\ref{monte}), since these are unknown and ``buried'' within the arrival time measurements that are provided in this problem.)
+where the intercept time $t_0$ depends on the thickness and slowness of the upper layer, and $s_2$ is the slowness of the lower layer. The estimated noise in the first arrival time measurements is believed to be independent and normally distributed with the expected value 0 and standard deviation $\sigma = 0.1$~s. (Note: Up until problem~1-\ref{monte}, you are not going to generate any errors. The errors are unknown and ``buried'' within the arrival time measurements that are provided in this problem.)
 %
 \begin{enumerate}
 \item (0.0) Write \refEq{twolayer} as a forward model $\bd = \bG\bem$ in matrix-vector schematic form.
@@ -55,10 +55,10 @@ Note: It is probably easiest to use the transformed variables $\bd_w$ and $\bG_w
 \end{enumerate}
 
 
-\item (0.2) Calculate the model parameter covariance matrix, $\covm$, and the corresponding correlation matrix, $\brho_{\rm M}$. How will the correlations be manifested in the general appearance of the error ellipsoid in $(t_0, s_2)$ space?
+\item (0.2) Calculate the posterior model parameter covariance matrix $\cpost$ and the corresponding correlation matrix $\rhopost$. How will the correlations be manifested in the general appearance of the error ellipsoid in $(t_0,s_2)$ space?
 
 \pagebreak
-\item (0.3) Calculate conservative $95\%$ confidence intervals for $t_0$ and $s_2$.
+\item (0.3) Calculate conservative 95\% confidence intervals for $t_0$ and $s_2$.
 %
 \begin{enumerate}
 \item (0.1) What value of $\Delta$ should you use?
@@ -264,8 +264,8 @@ See \refApp{sec:pert}.
 \item (0.2) List the values for the difference $\bem_{\dagger}-\bem_{\rm checker}$. \\
 What parameters are perfectly recovered? Plot the vector.
 \item (0.2) What is the formula for the covariance matrix $\covm$ associated with $\bem_{\dagger}$? Assume that $\covd = \sigma^2\bI$.
-\item (0.2) Compute the covariance matrix $\covm$, using $\sigma = 1$~s. \\\
-List the standard deviations associated with $\covm$.
+\item (0.2) Compute the covariance matrix $\cpost$, using $\sigma = 1$~s. \\\
+List the standard deviations associated with $\cpost$.
 \item (0.2) Compute and plot the correlation matrix $\brho_{\rm M}$. List the correlation coefficient between the 2nd and 4th model parameters.
 \end{enumerate}
 
@@ -275,7 +275,7 @@ List the standard deviations associated with $\covm$.
 \item Use \verb+caxis(p*[-1 1])+ (where \verb+p+ is a sensible choice), so that the zero values are easy to identify.
 \end{itemize}
 
-\item (0.4) Interpret the pattern of differences, $\bem_{\dagger}-\bem_{\rm checker}$, in the context of the geometry of the experiment (\refFig{fig:index}).
+\item (0.4) Interpret the pattern of differences $\bem_{\dagger}-\bem_{\rm checker}$ in the context of the geometry of the experiment (\refFig{fig:index}).
 
 \item (0.2) If any block values are recovered exactly, does this imply perfect resolution for these model parameters?
 \end{enumerate}
@@ -298,7 +298,7 @@ List the standard deviations associated with $\covm$.
 \section{Aside: model parameters as perturbations}
 \label{sec:pert}
 
-The tomography problem was introduced in Example~1.12 with the unknown entries of the model vector being slowness values, $s_k = 1/v_k$, where $v_k > 0$ is the velocity of the medium. There are now negative entries in $\bem$, which is not permitted for slowness. The entries of $\bem$ should be thought of as {\em perturbations} in slowness from some uniform value, $s_0$. Then the entries in the data vector should be thought of as {\em perturbations} in travel time from the reference travel time, $\bd_0 = \bG\bem_0$, where $\bem_0$ has $s_0$ in each entry. We can rewrite our problem as
+The tomography problem was introduced in Example~1.12 with the unknown entries of the model vector being slowness values $s_k = 1/v_k$, where $v_k > 0$ is the velocity of the medium. In \citet{AsterE2} Example 3.1, there are negative entries in $\bem$, which is not permitted for slowness. The entries of $\bem$ should be thought of as {\em perturbations} in slowness from some uniform value, $s_0$. Then the entries in the data vector should be thought of as {\em perturbations} in travel time from the reference travel time, $\bd_0 = \bG\bem_0$, where $\bem_0$ has $s_0$ in each entry. We can rewrite our problem as
 %
 \begin{eqnarray}
 \bG\bem &=& \bd
@@ -310,7 +310,7 @@ The tomography problem was introduced in Example~1.12 with the unknown entries o
 \bG\bDelta\bem &=& \bDelta\bd
 \end{eqnarray}
 %
-In this case, there is nothing wrong with $\bDelta\bem < 0$ or $\bDelta\bd < 0$. We should think of the checkerboard as $\bDelta\bem$.
+In this case, there is nothing wrong with $\bDelta\bem < 0$ or $\bDelta\bd < 0$. We should think of the checkerboard as $\bDelta\bem$ and the entries of the data vector as differential times.
 
 %---------------------------------
 
