--- a/latex/hw_mogi.tex
+++ b/latex/hw_mogi.tex
@@ -86,9 +86,7 @@ Note 2: You may want to adjust the color scale\footnote{You can adjust the color
 
 \item (0.4) Provide the best-fitting values for $z_{\rm s}$ and $V$. 
 
-\item (0.4) Compare the $z_{\rm s}$ vs $V$ misfit function (``A'') to the $y_{\rm s}$ vs $x_{\rm s}$ misfit function (``B'').
-%You see that the shape of the function is different.
-Misfit function A is largely of circular shape while misfit function B appears elongated.
+\item (0.4) The $y_{\rm s}$-vs-$x_{\rm s}$ misfit function has a circular shape while the $z_{\rm s}$-vs-$V$ misfit function is elongated.
 Provide a physical interpretation for this elongated pattern.
 \end{enumerate}
 
@@ -128,7 +126,7 @@ For the Mogi source problem, what would be reasonable choices for $\covd$ and $\
 
 %----------------
 
-\item (5.0) Explain---{\bf in words, not in code}---how to set up and solve the following three problems.
+\item (5.0) Explain---{\bf in words and equations, not in code}---how to set up and solve the following three problems.
 (You should be able to answer these questions without running any code, though if you're feeling ambitious, code it!) Use equations where helpful.
 
 \begin{enumerate}
