--- a/latex/lab_mogi.tex
+++ b/latex/lab_mogi.tex
@@ -36,7 +36,7 @@ Last compiled: \today
 %\pagebreak
 \begin{figure}[h]
 \centering
-\includegraphics[width=12cm]{mogi_data_LOS.eps}
+\includegraphics[width=16cm]{mogi_data_LOS.eps}
 \caption[]
 {{
 Interferogram used in this lab exercise. This is Okmok volcano, which is the northeastern part of Umnak island, which is part of the Fox Islands of the Aleutian Islands, Alaska. The interferogram shows the difference in displacement between images acquired at two different times. By knowing the time interval between the two images, one can estimate the rate of deformation.
@@ -46,6 +46,7 @@ Interferogram used in this lab exercise. This is Okmok volcano, which is the nor
 
 %===============================
 
+\pagebreak
 \subsection*{Overview}
 
 \begin{itemize}
@@ -87,12 +88,12 @@ Interferogram used in this lab exercise. This is Okmok volcano, which is the nor
 
 %------------------------
 
-%\pagebreak
+\pagebreak
 \subsection*{Theory I: From satellite to interferogram [10 min]}
 
 Discuss the main steps of InSAR processing.
 %
-\begin{spacing}{2}
+\begin{spacing}{3}
 \begin{enumerate}
 \item 
 \item 
