--- a/latex/hw_ch2.tex
+++ b/latex/hw_ch2.tex
@@ -55,7 +55,9 @@ Note: It is probably easiest to use the transformed variables $\bd_w$ and $\bG_w
 \end{enumerate}
 
 
-\item (0.2) Calculate the posterior model parameter covariance matrix $\cpost$ and the corresponding correlation matrix $\rhopost$. How will the correlations be manifested in the general appearance of the error ellipsoid in $(t_0,s_2)$ space?
+\item (0.2) Calculate the posterior model parameter covariance matrix $\cpost$ and the corresponding correlation matrix $\rhopost$. List the entries with at least 3 significant figures.
+
+How will the correlations be manifested in the general appearance of the error ellipsoid in $(t_0,s_2)$ space?
 
 \pagebreak
 \item (0.3) Calculate conservative 95\% confidence intervals for $t_0$ and $s_2$.
@@ -69,9 +71,11 @@ Hint: Use \verb+chi2inv.m+ to get $\Delta^2$; use $n$ degrees of freedom, as in 
 \item (0.1) What is the corresponding interval for $v_2 = 1/s_2$?
 \end{enumerate}
 
-\item (0.3) Calculate and plot the $95\%$ confidence error ellipsoid in the $(t_0, s_2)$ plane.
+\item (0.3) Calculate and plot the 95\% confidence error ellipsoid in the $(t_0, s_2)$ plane.
 
 Hint: Use \verb+plot_ellipse.m+, which has inputs $\Delta^2$, $\bC$, and $\bem$.
+
+Note: To check your result, you can display the 2000 estimated models from the following problem.
 
 \item (0.2) Compute $\chi^2_{\rm obs}$ and the $p$-value for the solution.
 
@@ -194,7 +198,7 @@ to the $m=20$ noise-free data points
 \end{enumerate}
 
 
-\item (0.3) To demonstrate the instability of the solution, compute the least-squares solution \verb+mlsqmod = inv(G'*G)*G'*y+ that is based on a non-square $\bG$ (of course, our $\bG$ is square).
+\item (0.3) To demonstrate the instability of the solution, compute the least-squares solution \verb+mlsqmod = inv(G'*G)*G'*y+. (Note \footnote{This equation is based on a non-square $\bG$, but of course our $\bG$ is square. Do not motify our $\bG$.})
 %
 \begin{enumerate}
 \item How does this model and its predictions compare with the previous results?
@@ -263,10 +267,10 @@ See \refApp{sec:pert}.
 \item (0.4) List the values for the recovered model $\bem_{\dagger} = \bR_{\rm M}\bem_{\rm checker}$. Plot the vector.
 \item (0.2) List the values for the difference $\bem_{\dagger}-\bem_{\rm checker}$. \\
 What parameters are perfectly recovered? Plot the vector.
-\item (0.2) What is the formula for the covariance matrix $\covm$ associated with $\bem_{\dagger}$? Assume that $\covd = \sigma^2\bI$.
-\item (0.2) Compute the covariance matrix $\cpost$, using $\sigma = 1$~s. \\\
+\item (0.2) What is the formula for the covariance matrix $\cpost$ associated with $\bem_{\dagger}$? \\ Assume that $\covd = \sigma^2\bI$.
+\item (0.2) Compute the covariance matrix $\cpost$ using $\sigma = 1$~s. \\
 List the standard deviations associated with $\cpost$.
-\item (0.2) Compute and plot the correlation matrix $\brho_{\rm M}$. List the correlation coefficient between the 2nd and 4th model parameters.
+\item (0.2) Compute and plot the correlation matrix $\rhopost$. List the correlation coefficient between the 2nd and 4th model parameters.
 \end{enumerate}
 
 \begin{itemize}
