linefit and newton latex to python

--- a/latex/lab_linefit.tex
+++ b/latex/lab_linefit.tex
@@ -51,7 +51,7 @@ The objective of this lab is to introduce the concepts of forward and inverse pr
 \vertgap
 
 \item What are the different ways to compute the solution vector $\bem$? \\
-(XXX Type \verb+help \+ or \verb+help inv+ for details. XXX)
+(To see the help for a function (\eg, \verb+inv+), type \verb+help(LA.inv)+ or \verb+LA.inv?+)
 
 \vertgap
 
