--- a/latex/lab_newton.tex
+++ b/latex/lab_newton.tex
@@ -30,20 +30,21 @@ Last compiled: \today
 
 \subsection*{Instructions}
 
-Create a copy of the template program: \verb+cp lab_newton_template.m lab_newton.m+
-
+Open \verb+lab_newton.ipynb+.
+%Create a copy of the template program: \verb+cp lab_newton_template.m lab_newton.m+
+%
 \begin{enumerate}
-\item Explain why the following three operations are equivalent: \verb+inv(6)*2+, \verb+6\2+, \verb+1/6*2+. \\
-Type \verb+help \+
+\item Explain why the following operations are equivalent: \verb+inv(6)*2+ and \verb+1/6*2+. \\
+Type \verb+LA.inv?+ for details.
 
 \vertgap
 
-\item Open the template program \verb+lab_newton.m+.
-What are \verb+F+, \verb+g+, and \verb+H+?
+\item What are \verb+F+, \verb+g+, and \verb+H+?
 
 \vertgap
 
-\item Using the Matlab built-in function \verb+fminbnd+, compute the (numerical) minimum of $F(\bem)$.
+%\item Using the Matlab built-in function \verb+fminbnd+, compute the (numerical) minimum of $F(\bem)$.
+\item Using the Python scipy function \verb+optimize.fminbound+, compute the (numerical) minimum of $F(\bem)$.
 
 Plot the point $(\bem_{\rm min},\,F(\bem_{\rm min}))$ on the curve $F(\bem)$.
 
@@ -53,7 +54,7 @@ Zoom in to show that this appears to be a true minimum.
 
 \vspace{10cm}
 
-\item Implement the Newton algorithm (Tarantola, 2005, Eq. 6.291), and demonstrate (graphically or numerically) that you reach the minimum.
+\item Implement the Newton algorithm (Tarantola, 2005, Eq.~6.291), and demonstrate (graphically or numerically) that you reach the minimum.
 
 Plot the point $(\bem,\,F(\bem))$ for each new value of $\bem$.
 
@@ -65,7 +66,7 @@ Try several different starting values of $\bem$ to make sure it works.
 
 \vertgap
 
-\item Is your $F(\bem_{\rm min})$ lower or higher than Matlab's?
+\item Is your $F(\bem_{\rm min})$ lower or higher than Python's?
 
 \vertgap
 
