--- a/latex/hw627_header.tex
+++ b/latex/hw627_header.tex
@@ -54,3 +54,5 @@
 \newcommand{\GcolorT}{\textcolor{blue}{\bV}\bS^T\textcolor{red}{\bU^T}}
 \newcommand{\GpcolorT}{\textcolor{blue}{\bV_p}\,\bS_p\textcolor{red}{\bU_p^T}}
 \newcommand{\GdcolorT}{\textcolor{red}{\bU_p}\,\bS_p^{-1}\textcolor{blue}{\bV_p^T}}
+
+\newcommand{\blank}{xxxx}
