--- a/latex/lab_newton.tex
+++ b/latex/lab_newton.tex
@@ -34,8 +34,10 @@ Open \verb+lab_newton.ipynb+.
 %Create a copy of the template program: \verb+cp lab_newton_template.m lab_newton.m+
 %
 \begin{enumerate}
-\item Explain why the following operations are equivalent: \verb+inv(6)*2+ and \verb+1/6*2+. \\
-Type \verb+LA.inv?+ for details.
+\item Consider the equation $\bH\bem = \bg$. \\
+If $\bH$ is invertible, what is the solution for $\bg$? \\
+If $\bH$ is a scalar, why should these commands be equivalent: \verb+inv(6)*2+ and \verb+1/6*2+. \\
+(Type \verb+LA.inv?+ for details. In fact, it won't work with a scalar.)
 
 \vertgap
 
